--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   </p>
   <video src="SatTraj.mp4" style="width: 80%;border-radius: 25px;margin-left: 10%;" controls alt="Satellite Trajectory"></video>
 
+  <img src="SatelliteTrajectoryTFinal.jpg" style="width: 80%;border-radius: 25px;margin-left: 10%;" >
+
+  <img src="DistanceVSTime.jpg" style="width: 80%;border-radius: 25px;margin-left: 10%;" >
   
   
 </body>
